<resources>
    <string name="app_name">Chat Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="accept_notification">Accept Notification</string>
    <string name="birth_date">Birth Date</string>
    <string name="logout">Log out</string>
    <string name="refresh">Refresh</string>
    <string name="send">Send</string>
    <string name="type_message">Type a message</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="error_password_minimum">Minimum 6 characters</string>
    <string name="main_activity_backbtn_toast">Press the back button again to close the application.</string>
    <string name="error_email">Invalid email</string>
    <string name="message_sent">"Message is sent!"</string>
    <string name="error_username">Type username</string>
    <string name="error_name">Type First name</string>
    <string name="error_last_name">Type Last name</string>
    <string name="logged_in_user">User:</string>
    <string name="error_user_not_found">User not found, please register</string>
    <string name="error_user_exist">User already exists</string>
    <string name="success_user_register">User successfully registred</string>
    <string name="dialog_delete_title">Delete?</string>
    <string name="dialog_delete_contact_confirmation_text">Are you sure you want to delete contact?</string>
    <string name="dialog_delete_message_confirmation_text">Are you sure you want to delete message?</string>
    <string name="dialog_delete_positive_btn">Yes</string>
    <string name="dialog_delete_negative_btn">No</string>
    <string name="error_delete_only_your_messages">You can only delete your messages</string>
    <string name="error_cannot_register_chatbot">You can not register as chatbot, its already used by app</string>
    <string name="error_cannot_login_chatbot">You can not login as chatbot, its already used by app</string>
    <string name="error_bot_respawn">Bot will be spawned again</string>
    <string name="error_cannot_logout">Cannot logout</string>
    <string name="error_message_not_send">Message not send</string>
    <string name="chatting_with_text">Chatting:</string>
    <string name="connection">Connection:</string>
    <string name="server">Server:</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="tap_to_get_msg">Tap to show last message</string>
    <string name="no_new_messages">No new messages</string>
    <string name="send_btn">Send button</string>
    <string name="success_contact_delete">Contact successfully deleted</string>
    <string name="success_msg_delete">Message successfully deleted</string>
    <string name="have_new_message">You have new message</string>
</resources>
