<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="stefan.jovanovic.chatapplication.MainActivity">


    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingTop="100dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/username"
        android:id="@+id/username"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingTop="5dp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/password"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:layout_gravity="center_horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/login"
        android:id="@+id/login"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/register"
        android:id="@+id/register"/></LinearLayout>

</LinearLayout>
